Creacion de componente login y validaciones

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
       <div class="navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0 ">
           <li class="nav-item ml-auto">
-            <a class="nav-link" href="./pages/samples/login.html">Login</a>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
         </ul>
       </div>
@@ -15,6 +15,6 @@
   <div class="container">
     <div class="masthead-subheading">Bienvenido!</div>
     <div class="masthead-heading text-uppercase">Reserva tu turno</div>
-    <a class="btn btn-primary btn-xl text-uppercase" href="pages/turnos/crearTurnoPublic.php">Turnos Online</a>
+    <a class="btn btn-primary btn-xl text-uppercase" routerLink="/create-turn">Turnos Online</a>
   </div>
 </header>
