creacion de dashboard navigation y app-schedule

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
                 <label for="password" class="form-label">Contraseña:</label>
                 <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control">
               </div>
-              <div class="text-danger mb-3">{{ errorMessage }}</div> <!-- Mostrar mensaje de error -->
+            <!-- <div class="text-danger mb-3">{{ errorMessage }}</div>  Mostrar mensaje de error -->
               <button type="submit" class="btn btn-primary btn-block" (click)="onSubmit()">Iniciar sesión</button>
             </form>
           </div>
