--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <!-- Footer-->
 <footer class="footer py-4">
     <div class="container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d890.2738847151383!2d-55.0236393!3d-26.8050864!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1694549076320!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="row align-items-center">
             <div class="col-lg-4 text-lg-start">Copyright &copy; www.stigelmaier.com 2022</div>
             <div class="col-lg-4 my-3 my-lg-0">
