commit appointment list and create

--- a/src/app/components/create-turn/create-turn.component.css
+++ b/src/app/components/create-turn/create-turn.component.css
@@ -25,3 +25,6 @@
 .col:last-child {
   margin-right: 0;
 }
+.vertical-radio-button {
+  display: block; /* Display each radio button as a block, making them appear vertically */
+}
