--- a/src/app/components/create-turn/create-turn.component.html
+++ b/src/app/components/create-turn/create-turn.component.html
@@ -1,12 +1,11 @@
-
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-  
+
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Crear Turno</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      
+
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
@@ -30,8 +29,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Telefono" formControlName="firstName">
-            <mat-error *ngIf="addressForm.controls['firstName'].hasError('required')">
+            <input matInput placeholder="Telefono" formControlName="phoneNumber">
+            <mat-error *ngIf="addressForm.controls['phoneNumber'].hasError('required')">
               Telefono is <strong>required</strong>
             </mat-error>
           </mat-form-field>
@@ -39,78 +38,64 @@
 
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Email" formControlName="lastName">
-            <mat-error *ngIf="addressForm.controls['lastName'].hasError('required')">
+            <input matInput placeholder="Email" formControlName="email">
+            <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
               Email is <strong>required</strong>
             </mat-error>
           </mat-form-field>
         </div>
       </div>
-
-    <!--   <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <textarea matInput placeholder="Address" formControlName="address"></textarea>
-            <mat-error *ngIf="addressForm.controls['address'].hasError('required')">
-              Address is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="row" *ngIf="!hasUnitNumber">
-        <div class="col">
-          <button mat-button type="button" (click)="hasUnitNumber = !hasUnitNumber">
-            + Add C/O, Apt, Suite, Unit
-          </button>
-        </div>
-      </div> -->
-      <div class="row" *ngIf="hasUnitNumber">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <textarea matInput placeholder="Address 2" formControlName="address2"></textarea>
-          </mat-form-field>
-        </div>
-      </div>
+      
       <div class="row">
-        
         <div class="col">
           <mat-form-field class="full-width">
-            <mat-select placeholder="Peluquero" formControlName="state">
-              <mat-option *ngFor="let state of states" [value]="state.abbreviation">
-                {{ state.name }}
+            <mat-select placeholder="Peluquero" formControlName="peluquero">
+              <mat-option *ngFor="let user of users" [value]="user.id">
+                {{ user.nombre }}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="addressForm.controls['state'].hasError('required')">
+            <mat-error *ngIf="addressForm.controls['peluquero'].hasError('required')">
               Peluquero es <strong>required</strong>
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="col">      
-          <mat-form-field class="full-width">
-            <input type="date" matInput placeholder="City" formControlName="city">
-            <mat-error *ngIf="addressForm.controls['city'].hasError('required')">
-              Fecha is <strong>required</strong>
+
+        <div class="col">
+          <mat-form-field>
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="date" (dateChange)="fechaSeleccionada($event)">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-error *ngIf="addressForm.controls['date'].hasError('required')">
+              Fecha es <strong>required</strong>
             </mat-error>
           </mat-form-field>
+
         </div>
       </div>
-      <!-- <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput #postalCode maxlength="5" placeholder="Postal Code" type="number" formControlName="postalCode">
-            <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
-          </mat-form-field>
-        </div>
-      </div> -->
+
       <div class="row">
         <div class="col">
           <mat-label>Disponibilidad</mat-label>
-          <mat-radio-group formControlName="shipping">
-            <mat-radio-button value="free">Manana</mat-radio-button>
-            <mat-radio-button value="priority">Tarde</mat-radio-button>
+          <mat-radio-group formControlName="schedule" (change)="onRadioChange($event)">
+            <mat-radio-button value="morning">Mañana</mat-radio-button>
+            <mat-radio-button value="afternoon">Tarde</mat-radio-button>
           </mat-radio-group>
+          <mat-error *ngIf="addressForm.controls['schedule'].hasError('required')">
+            Elija una opcion <strong>required</strong>
+          </mat-error>
         </div>
       </div>
+
+      <mat-radio-group formControlName="selectedRadio">
+        <mat-radio-button *ngFor="let schedule of turnos" [id]="schedule.id" [value]="schedule.value" class="vertical-radio-button">
+          {{ schedule.label }}
+        </mat-radio-button>
+      </mat-radio-group>
+      <!-- <mat-error *ngIf="addressForm.controls['selectedRadio'].hasError('required')">
+        selectedRadio es <strong>required</strong>
+      </mat-error> -->
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary" type="submit">Submit</button>
