--- a/src/app/components/dashboard-navigation/dashboard-navigation.component.html
+++ b/src/app/components/dashboard-navigation/dashboard-navigation.component.html
@@ -1,8 +1,6 @@
 <mat-sidenav-container class="sidenav-container dark-theme">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
 
     <button mat-button class="menu-button" (click)="showTurnComponent()">
@@ -15,13 +13,21 @@
       <span>Cronograma</span>
     </button>
     <mat-divider></mat-divider>
-    <button mat-button class="menu-button">
+    <button mat-button class="menu-button" (click)="showUserListComponent()">
       <mat-icon>settings</mat-icon>
-      <span>Gestionar cuenta</span>
+      <span>User list</span>
+    </button>
+    <button mat-button class="menu-button" (click)="showUserAddComponent()">
+      <mat-icon>settings</mat-icon>
+      <span>User add</span>
+    </button>
+    <button mat-button class="menu-button" (click)="showAppointmentListComponent()">
+      <mat-icon>settings</mat-icon>
+      <span>Appointment List</span>
     </button>
 
 
-<!--     <mat-nav-list>
+    <!--     <mat-nav-list>
 
       <a mat-list-item class="mat-list-item" (click)="showTurnComponent()">Crear Turno</a>
       <a mat-list-item (click)="showSchuduleComponent()">Cronograma</a> 
@@ -30,19 +36,20 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>frontend_peluqueria</span>
     </mat-toolbar>
+
     <!-- Add Content Here -->
+    <app-schedule *ngIf="showSchudule"></app-schedule>    
     <app-dashboard-appointment *ngIf="showCreateTurn"></app-dashboard-appointment> 
-<!--    <app-schedule *ngIf="showSchudule"></app-schedule>  -->
-   <app-cronograma *ngIf="showSchudule"></app-cronograma> 
+    <app-user-list *ngIf="showUserList"></app-user-list>
+    <app-user-create *ngIf="showUserAdd"></app-user-create>
+    <app-list-appointments *ngIf="showAppointmentList"></app-list-appointments>
+
+
   </mat-sidenav-content>
 </mat-sidenav-container>
