--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -1,3 +1,12 @@
-.full-width-table {
-  width: 100%;
+label {
+    margin-right: 15px;
+}
+
+.card-body, th, tr, td{
+    color: white;
+    background-color: gray;
+}
+
+.container-fluid{
+    padding-top: 10px;
 }
