--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -47,3 +47,6 @@ header.masthead .masthead-heading {
   }
 }
 
+button {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+}
