--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~@angular/material/prebuilt-themes/purple-green.css';
 /* Estilos para el tema oscuro */
 body {
-    background-color: #333 !important; /* Fondo oscuro */
-    color: #fff !important; /* Texto en color claro */
-  }
+    background-color: rgb(0, 0, 0) !important; /* Fondo oscuro */
+    color: white !important;
+}
   
  
