--- a/src/app/components/create-turn/create-turn.component.css
+++ b/src/app/components/create-turn/create-turn.component.css
@@ -1,30 +1,44 @@
-.full-width {
-  width: 100%;
-}
-
+/* Establece el ancho máximo de la tarjeta */
 .shipping-card {
-  min-width: 120px;
+  max-width: 400px; /* Ajusta este valor según tu preferencia para el ancho máximo */
   margin: 20px auto;
+  background-color: #191c24 !important;
 }
 
+/* Estilo para los botones radio */
 .mat-radio-button {
   display: block;
-  margin: 5px 0;
+  margin: 10px 0; /* Ajusta el margen según tu preferencia */
 }
 
+/* Estilo para las filas */
 .row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column; /* Cambia la dirección a columna para que los elementos se apilen verticalmente */
+  margin-bottom: 10px; /* Ajusta el margen inferior según tu preferencia */
 }
 
+/* Estilo para las columnas */
 .col {
   flex: 1;
-  margin-right: 20px;
+  margin-bottom: 10px; /* Ajusta el margen inferior según tu preferencia */
 }
 
+/* Elimina el margen inferior del último elemento de la columna */
 .col:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
 }
+
+/* Estilo para los botones radio en posición vertical */
 .vertical-radio-button {
-  display: block; /* Display each radio button as a block, making them appear vertically */
+  display: block;
+}
+
+/* Estilo para el título de la tarjeta */
+mat-card-title {
+  margin-bottom: 15px;
+}
+
+.error{
+  margin-bottom: 5px;
 }
