--- a/src/app/components/create-turn/create-turn.component.html
+++ b/src/app/components/create-turn/create-turn.component.html
@@ -1,104 +1,102 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-
-  <mat-card class="shipping-card">
-    <mat-card-header>
-      <mat-card-title>Crear Turno</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Nombre" formControlName="firstName">
-            <mat-error *ngIf="addressForm.controls['firstName'].hasError('required')">
-              Nombre is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Apellido" formControlName="lastName">
-            <mat-error *ngIf="addressForm.controls['lastName'].hasError('required')">
-              Apellido is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Telefono" formControlName="phoneNumber">
-            <mat-error *ngIf="addressForm.controls['phoneNumber'].hasError('required')">
-              Telefono is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Email" formControlName="email">
-            <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
-              Email is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
+<mat-card class="shipping-card">
+  <mat-card-header>
+    <mat-card-title>Crear Turno</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
       
       <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <mat-select placeholder="Peluquero" formControlName="peluquero">
-              <mat-option *ngFor="let user of users" [value]="user.id">
-                {{ user.nombre }}
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="addressForm.controls['peluquero'].hasError('required')">
-              Peluquero es <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="date" (dateChange)="fechaSeleccionada($event)">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="addressForm.controls['date'].hasError('required')">
-              Fecha es <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-
-        </div>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Nombre" formControlName="firstName">
+          <mat-error *ngIf="addressForm.controls['firstName'].hasError('required')">
+            Nombre is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
       </div>
 
       <div class="row">
-        <div class="col">
-          <mat-label>Disponibilidad</mat-label>
-          <mat-radio-group formControlName="schedule" (change)="onRadioChange($event)">
-            <mat-radio-button value="morning">Mañana</mat-radio-button>
-            <mat-radio-button value="afternoon">Tarde</mat-radio-button>
-          </mat-radio-group>
-          <mat-error *ngIf="addressForm.controls['schedule'].hasError('required')">
-            Elija una opcion <strong>required</strong>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Apellido" formControlName="lastName">
+          <mat-error *ngIf="addressForm.controls['lastName'].hasError('required')">
+            Apellido is <strong>required</strong>
           </mat-error>
-        </div>
+        </mat-form-field>
+      </div>
+
+
+      <div class="row">
+
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Telefono" formControlName="phoneNumber">
+          <mat-error *ngIf="addressForm.controls['phoneNumber'].hasError('required')">
+            Telefono is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="row">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Email" formControlName="email">
+          <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+
+      <div class="row">
+
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Peluquero" formControlName="peluquero">
+            <mat-option *ngFor="let user of users" [value]="user.id">
+              {{ user.nombre }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="addressForm.controls['peluquero'].hasError('required')">
+            Peluquero es <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="row">
+        <mat-form-field>
+          <mat-label>Choose a date</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="date" (dateChange)="fechaSeleccionada($event)">
+          <!--   <mat-hint>MM/DD/YYYY</mat-hint> -->
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="addressForm.controls['date'].hasError('required')">
+            Fecha es <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="row">
+        <mat-label>Disponibilidad</mat-label>
+        <mat-radio-group formControlName="schedule" (change)="onRadioChange($event)">
+          <mat-radio-button value="morning">Mañana</mat-radio-button>
+          <mat-radio-button value="afternoon">Tarde</mat-radio-button>
+        </mat-radio-group>
+        <mat-error *ngIf="addressForm.controls['schedule'].hasError('required')">
+          Elija una opcion <strong>required</strong>
+        </mat-error>
       </div>
 
       <mat-radio-group formControlName="selectedRadio">
-        <mat-radio-button *ngFor="let schedule of turnos" [id]="schedule.id" [value]="schedule.value" class="vertical-radio-button">
+        <mat-radio-button *ngFor="let schedule of turnos" [id]="schedule.id" [value]="schedule.value"
+          class="vertical-radio-button">
           {{ schedule.label }}
         </mat-radio-button>
       </mat-radio-group>
-      <!-- <mat-error *ngIf="addressForm.controls['selectedRadio'].hasError('required')">
-        selectedRadio es <strong>required</strong>
-      </mat-error> -->
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
-    </mat-card-actions>
-  </mat-card>
-</form>
+      <div class="error" *ngIf="error">
+        <mat-error>No hay turnos disponibles</mat-error>
+      </div>
+      
+      <mat-card-actions>
+        <button mat-raised-button color="accent" type="submit">Guardar</button>
+      </mat-card-actions>
+    </form>
+
+  </mat-card-content>
+
+</mat-card>
