--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,8 @@
   <div class="container">
     <div class="masthead-subheading">Bienvenido!</div>
     <div class="masthead-heading text-uppercase">Reserva tu turno</div>
-    <a class="btn btn-primary btn-xl text-uppercase" routerLink="/create-turn">Turnos Online</a>
+    <button mat-fab extended routerLink="/create-turn" aria-label="Crear turno">
+      <mat-icon>event</mat-icon>
+      Turno Online</button>
   </div>
 </header>
