--- a/src/app/components/list-appointment/list-appointment.component.css
+++ b/src/app/components/list-appointment/list-appointment.component.css
@@ -1,10 +1,37 @@
 .full-width-table {
   width: 100%;
- 
-}
-
+ }
 .mat-elevation-z8{
-  background-color: white !important;
   margin: 20px auto;
 }
 
+.full-width-table {
+  width: 100%;
+}
+
+.mat-elevation-z8 {
+  margin: 20px auto;
+}
+
+.table-container {
+  max-height: 300px; /* Establece la altura máxima que deseas */
+  overflow-y: auto; /* Hace que la tabla sea desplazable si es necesario */
+}
+
+/* Opcional: Estilo para los botones de eliminar */
+.mat-card-actions button {
+  padding: 5px 10px;
+}
+
+.radioGroup{
+  padding: 5px 10px;
+}
+
+.mat-elevation-z8 {
+  background-color: #2c2e33 !important;
+  margin: 20px auto;
+  max-width: 900px; 
+}
+.mat-elevation-z8 * {
+  background-color: inherit; /* Hereda el fondo del elemento padre */
+}
