--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -2,11 +2,69 @@ label {
     margin-right: 15px;
 }
 
-.card-body, th, tr, td{
-    color: white;
-    background-color: gray;
-}
-
-.container-fluid{
+.container-fluid {
     padding-top: 10px;
 }
+
+.custom-select-width {
+    width: 80px; /* Cambia el valor según sea necesario */
+}
+
+
+td,
+th {
+    background-color: #2c2e33 !important;
+    color: white;
+    border: 2px solid #4c5058; /* Cambia el color y el grosor del borde */
+    text-align: center; /* Alinea el texto al centro */
+    vertical-align: middle; /* Alinea verticalmente al centro */
+}
+
+.form-control{
+    display: none;
+}
+
+/* Establece el ancho máximo de la tarjeta */
+.shipping-card {
+    max-width: 900px; /* Ajusta este valor según tu preferencia para el ancho máximo */
+    margin: 20px auto;
+    background-color: #191c24 !important;
+  }
+  
+  /* Estilo para los botones radio */
+  .mat-radio-button {
+    display: block;
+    margin: 10px 0; /* Ajusta el margen según tu preferencia */
+  }
+  
+  /* Estilo para las filas */
+  .row {
+    display: flex;
+    flex-direction: column; /* Cambia la dirección a columna para que los elementos se apilen verticalmente */
+    margin-bottom: 10px; /* Ajusta el margen inferior según tu preferencia */
+  }
+  
+  /* Estilo para las columnas */
+  .col {
+    flex: 1;
+    margin-bottom: 10px; /* Ajusta el margen inferior según tu preferencia */
+  }
+  
+  /* Elimina el margen inferior del último elemento de la columna */
+  .col:last-child {
+    margin-bottom: 0;
+  }
+  
+  /* Estilo para los botones radio en posición vertical */
+  .vertical-radio-button {
+    display: block;
+  }
+  
+  /* Estilo para el título de la tarjeta */
+  mat-card-title {
+    margin-bottom: 15px;
+  }
+  
+  .error{
+    margin-bottom: 5px;
+  }
