--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,91 +1,84 @@
+<mat-card class="shipping-card">
+  
+  <mat-card-header>
+    <mat-card-title>Crear Turno</mat-card-title>
+  </mat-card-header>
 
-<div class="container-scroller">
-  <div class="container-fluid page-body-wrapper">
-    <div class="main-panel">
-      <div class="content-wrapper">
-        <form id="formHorario" (ngSubmit)="guardarCambios()">
-          <div class="col-lg-12 grid-margin stretch-card">
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">Gestión de horario</h4>
-                <div class="table-responsive">
-                  <table class="table table-bordered">
-                    <thead>
-                      <tr >
-                        <th>Dia</th>
-                        <th>Activo</th>
-                        <th>Turno mañana</th>
-                        <th>Activo</th>
-                        <th>Turno tarde</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let dia of dias">
-                        <th>{{ dia.valor }}</th>
-                        <td>
-                          <div class="form-check form-switch">
-                            <!-- id="active_morning" -->
-                            <input type="checkbox"  name="active_morning"
-                                   class="form-check-input" [checked]="horarios[dia.key]?.active_morning"
-                                   (change)="toggleCheckbox(dia.key, 'active_morning')">
-                          </div>
-                        </td>
-                        <td>
-                          <div class="row">
-                            <div class="col">
-                              <label for="morning_start">Desde:</label>
-                              <select name="morning_start" (change)="onSelectMorningStart($event, dia.key)">
-                                <option *ngFor="let hora of horasAM" [value]="hora" [selected]="horarios[dia.key]?.morning_start === hora">
-                                  {{ hora }}
-                                </option>
-                              </select>
-                            </div>
-                            <div class="col">
-                              <label for="morning_end">Hasta:</label>
-                              <select name="morning_end" (change)="onSelectMorningEnd($event, dia.key)">
-                                <option *ngFor="let hora of horasAM" [selected]="horarios[dia.key]?.morning_end === hora"
-                                        [value]="hora">{{ hora }}</option>
-                              </select>
-                            </div>
-                          </div>
-                        </td>
-                        <td>
-                          <div class="form-check form-switch">
-                            <input type="checkbox" name="active_afternoon"
-                                   class="form-check-input" [checked]="horarios[dia.key]?.active_afternoon"
-                                   (change)="toggleCheckbox(dia.key, 'active_afternoon')">
-                          </div>
-                        </td>
-                        <td>
-                          <div class="row no-gutters">
-                            <div class="col">
-                              <label for="afternoon_start" class="ml-5">Desde:</label>
-                              <select  name="afternoon_start" (change)="onSelectAfternoonStart($event, dia.key)">
-                                <option *ngFor="let hora of horasPM" [selected]="horarios[dia.key]?.afternoon_start === hora"
-                                        [value]="hora">{{ hora }}</option>
-                              </select>
-                            </div>
-                            <div class="col">
-                              <label for="afternoon_end">Hasta:</label>
-                              <select name="afternoon_end" (change)="onSelectAfternoonEnd($event, dia.key)">
-                                <option *ngFor="let hora of horasPM" [selected]="horarios[dia.key]?.afternoon_end === hora"
-                                        [value]="hora">{{ hora }}</option>
-                              </select>
-                            </div>
-                          </div>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
+  <mat-card-content>
+    <form id="formHorario" (ngSubmit)="guardarCambios()" class="form">
+      <div class="table-responsive">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Dia</th>
+              <th>Activo</th>
+              <th>Turno mañana</th>
+              <th>Activo</th>
+              <th>Turno tarde</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let dia of dias">
+              <td>{{ dia.valor }}</td>
+              <td>
+                <div class="form-check form-switch">
+                  <input type="checkbox" name="active_morning" class="form-check-input"
+                    [checked]="horarios[dia.key]?.active_morning" (change)="toggleCheckbox(dia.key, 'active_morning')">
                 </div>
-                <div class="container">
-                  <button type="submit" class="btn btn-primary btn-fw">Guardar cambios</button>
+              </td>
+              <td>
+                <div class="form-group">
+                  <label for="morning_start">Desde:</label>
+                  <select name="morning_start"  (change)="onSelectMorningStart($event, dia.key)">
+                    <option *ngFor="let hora of horasAM" [value]="hora" [selected]="horarios[dia.key]?.morning_start === hora">
+                      {{ hora }}
+                    </option>
+                  </select>
                 </div>
-              </div>
-            </div>
-          </div>
-        </form>
+                <div class="form-group">
+                  <label for="morning_end">Hasta:</label>
+                  <select name="morning_end"  (change)="onSelectMorningEnd($event, dia.key)">
+                    <option *ngFor="let hora of horasAM" [value]="hora" [selected]="horarios[dia.key]?.morning_end === hora">
+                      {{ hora }}
+                    </option>
+                  </select>
+                </div>
+              </td>
+              <td>
+                <div class="form-check form-switch">
+                  <input type="checkbox" name="active_afternoon" class="form-check-input"
+                    [checked]="horarios[dia.key]?.active_afternoon" (change)="toggleCheckbox(dia.key, 'active_afternoon')">
+                </div>
+              </td>
+              <td>
+                <div class="form-group">
+                  <label for="afternoon_start" class="ml-2">Desde:</label>
+                  <select name="afternoon_start"  (change)="onSelectAfternoonStart($event, dia.key)">
+                    <option *ngFor="let hora of horasPM" [value]="hora" [selected]="horarios[dia.key]?.afternoon_start === hora">
+                      {{ hora }}
+                    </option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="afternoon_end">Hasta:</label>
+                  <select name="afternoon_end"  (change)="onSelectAfternoonEnd($event, dia.key)">
+                    <option *ngFor="let hora of horasPM" [value]="hora" [selected]="horarios[dia.key]?.afternoon_end === hora">
+                      {{ hora }}
+                    </option>
+                  </select>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    </div>
-  </div>
-</div>
+      <mat-card-actions>
+      
+          <button mat-raised-button color="accent" type="submit">Guardar</button>
+    
+      </mat-card-actions>
+      
+    </form>
+  </mat-card-content>
+
+</mat-card>
