--- a/src/app/components/shared/header/header.component.css
+++ b/src/app/components/shared/header/header.component.css
@@ -1,7 +1,7 @@
 header.masthead {
   text-align: center;
   color: #fff;
-  background-image: url(../../../assets/img/fondo.jpg);
+  background-image: url(../../../../assets/img/fondo.jpg);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
